# polymarket-skill

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  btc5m_strategy.py  config.json  place_order.py  pyproject.toml  requirements.txt
.claude/skills/: polymarket.md
.claude/skills/run-polymarket/: SKILL.md  driver.py
dashboard/: __init__.py  app.py  bridge.py  ws_handler.py
dashboard/static/: app.js  index.html  style.css
scripts/: polymarket_tools.py
